@@ -355,7 +355,7 @@ struct c3x_config {
 	bool patch_disease_stopping_tech_flag_bug;
 	bool patch_division_by_zero_in_ai_alliance_eval;
 	bool patch_empty_army_movement;
-	bool patch_empty_army_combat;
+	bool patch_empty_army_combat_crash;
 	bool delete_off_map_ai_units;
 	bool fix_overlapping_specialist_yield_icons;
 	bool patch_premature_truncation_of_found_paths;
