@@ -312,7 +312,7 @@ ai_worker_requirement_percent = 150
 ; the search fails to find anything, there will be no default option, the dropdown selector will not be initialized, and the game will crash when it
 ; tries to open the popup. To fix this, the mod detects when the game has failed to find a new build option and fills in Wealth instead or, failing
 ; that, any unit or improvement that the city can build.
-;   PREVENT EMPTY ARMY FROM COMBAT -- Guards a crash in the army combat selection routine by returning the army unit itself if it has no contained
+;   PATCH EMPTY ARMY COMBAT CRASH -- Guards a crash in the army combat selection routine by returning the army unit itself if it has no contained
 ; units (prevents divide-by-zero in the vanilla selection loop).
 
 patch_submarine_bug = true
@@ -327,7 +327,7 @@ patch_barbarian_diagonal_bug = true
 patch_disease_stopping_tech_flag_bug = false
 patch_division_by_zero_in_ai_alliance_eval = true
 patch_empty_army_movement = true
-patch_empty_army_combat = true
+patch_empty_army_combat_crash = true
 patch_premature_truncation_of_found_paths = true
 patch_zero_production_crash = true
 patch_ai_can_sacrifice_without_special_ability = true
